src/App.css
*{box-sizing: border-box;}

body{
  margin: 0;
  padding: 0;
  background-color: rgb(255, 255, 255);
  font-family: 'Open Sans', sans-serif;
}

.container{
  background: url('./weather1.jpg') no-repeat center center/cover;
  opacity: .7;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 700px;
  margin: auto;
}
.city{
  color: #fff;
  margin: 0;
}
.temp{
  color: #fff;
}

.formContainer{
  width: 500px;
  display: flex;
  flex-direction: column;
  margin: 5px;
  margin-top: 30px;
}
.formContainer label{
  margin-bottom: 5px;
  font-weight: 600;
  text-align: center;
}
.formContainer input{
  padding: 10px;
  border: none;
  border-radius: 5px;
  font-size: 18px;
  width: 100%;
  text-align: center;
}

.weatherContainer{
  display: flex;
  flex-direction: column;
  padding: 10px;
  /* background-color: cadetblue; */
  width: 500px;
  border-radius: 5px;
  padding-bottom: 10px;
}

.weatherContainer img{
  width: 100px;
  margin: auto;
  filter: contrast(200%);
}
.weatherContainer .temp{
  margin-top: 0;
}
.conditions, .city, .temp{
  text-align: center;
}
.conditions{
  color: rgba(255, 152, 18, 0.781);
  font-weight: bolder;
  font-size: 22px;
  text-transform: capitalize;
}

.weatherConditions{
  background-color: #fff;
  width: 350px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: auto;
  padding: 5px;
  border-radius: 5px;
}

.weatherListItem{
  border-bottom: 1px dotted #777;
  width: 100%;
  text-align: center;
  padding: 8px;
  margin: 5px;
}
.weatherListItem:last-child{
  border-bottom: none;
}

.forecastContainer{
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  margin: auto;
  width: 100%;
  border-radius: 20px;
  padding: 10px;
}

.day1Container, .day2Container, .day3Container{
  background: rgba(231, 231, 231, 0.342);
  filter: contrast(200%);
  padding: 5px;
  border-radius: 5px;
  margin: 3px;
  text-align: center;
  width: 100%;
  text-transform: capitalize;
}
.forecastContainer .date{
  color: #fff;
  font-size: 15px;
}
.forecastContainer .desc{
font-size: 16px;
}
.day1Container{
font-size: 12px;
}
.day2Container{
font-size: 12px;
}
.day3Container{
font-size: 12px;
}

.error{
  color: red;
  display: none;
}

/* media */
@media (max-width: 768px) {
  .container{
    width: auto;
    height: 100vh;
    margin: 0;
    padding: 0;
    overflow: hidden;
  }
  .weatherContainer{
    width: auto;
  }
  .formContainer{
    margin-top: 20px;
  }
  .conditions{
    margin: 0;
  }
  .forecastContainer .desc{
    margin: 0;
    font-size: 12px;
  }
  .forecastContainer .date {
    margin: 0;
    font-size: 12px;
  }
  .forecastContainer .temp{
    margin: 0;
    font-size: 12px;
  }
  .wind{
    font-size: 12px;
    margin: 0;
  }
.formContainer input{
  display: flex;
  width: 70%;
  margin: auto;
}

  
}

@media only screen and (min-width: 1024px) and (max-width: 1025px) {
  .container{
    width: auto;
    height: 100vh;
    margin: 0;
    padding: 0;
    overflow: hidden;
  }
  .day1Container, .day2Container, .day3Container{
    height: 450px;
  }
  .forecastContainer{
    margin: 100px;
  }
  .weatherContainer{
    width: 650px;
    padding: 0;
  }
  .weatherContainer .temp{
    font-size: 24px;
  }
  .weatherContainer .conditions{
    font-size: 28px;
  }
  .weatherContainer .city{
    margin-top: 20px;
  }
  .weatherConditions{
    width: 650px;
    font-size: 25px;
  }
  .formContainer input {
    padding: 20px;
  }
  .forecastContainer .desc, .temp, .date, .wind{
    font-size: 25px;
  }

}

@media(max-width: 360px){
  .container{
    width: auto;
    height: 100%;
    overflow: hidden;
  }
  .weatherContainer{
    width: auto;
  }
  .forecastContainer{
    display: flex;
    flex-direction: column;
  }
  
  
}
@media(max-height: 800px){
  .conditions{
    margin: 0;
  }
}

